# Make-Your-Own-Adventure-Story-AI

./: README.md
backend/: .env  .gitignore  database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  deps.py  security.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: auth.py  story.py
backend/schemas/: auth.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  util.js
frontend/src/api/: auth.js
frontend/src/components/: LoadingStatus.jsx  Login.jsx  Navbar.jsx  Register.jsx  StoryGame.jsx  StoryLoader.jsx  ThemeInput.jsx  auth.css
frontend/src/context/: AuthContext.jsx
