[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.136.1",
    "langchain>=1.3.0",
    "langchain-groq>=1.1.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "langchain-core>=0.3.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.1.0",
]
